2008-02-14  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker-proto.h: Updated the comment with the definition
	for GET_PACKAGE_LIST, adding the new 'flags' field (N79897).

	* src/apt-worker-bin.cc (cmd_get_package_list): Encode available
	flags for each package, out of the info field (N79897).

	* src/main.h (struct package_info): Added a new 'flags' field to
	allow checking the flags for a package even when the 'info' field
	has not been filled yet (N79897).

	* src/main.cc (compare_system_updates): New function to be used in
	the comparison functions to sort the list of packages, so packages
	with the pkgflag_system_update flag are listed in first place,
	regardless of the sorting criteria and order (N79897).
	(compare_package_installed_names): Use compare_system_updates() to
	take into account packages with the system_update flag (N79897).
	(compare_package_available_names): Likewise (N79897).
	(compare_package_installed_versions): Likewise (N79897).
	(compare_package_available_versions): Likewise (N79897).
	(compare_package_installed_sizes): Likewise (N79897).
	(compare_package_download_sizes): Likewise (N79897).

2008-02-13  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/menu.cc (create_menu): Reordered menu items to be compliant
	with the latest UI specs (N80647).

	* src/util.cc (show_deb_file_chooser): Show the ? icon in the
	dialog title bar linking to the right help topic (N80172).

2008-02-13  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_check_domain_reply): Use new
	"ai_ni_error_broken_path_%s" logical id (N80629).

	* src/apt-worker-bin.cc (save_extra_info): Don't call fclose on a
	NULL pointer (N80650).

2008-02-12  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (set_current_toolbar): Take into account the global
	toolbar settings and the fullscreen mode to know whether the
	current toolbar should be shown or not (N80147).
	(set_current_toolbar_visibility): Use gtk_widget_show_all to