@@ -1,3 +1,12 @@
+2008-02-15  Felipe Erias Morandeira  <femorandeira@maemo.org>
+
+	* src/operations.cc (ip_download_cur_retry_confirm): if download
+	failed, offer the user the possibility of retrying it.
+	(ip_download_cur_retry_confirm_response): following the user's
+	decision, retry the download again or abort the operation 
+	(ip_download_cur_reply): uses the previous functions to handle 
+	failures during downloads
+
 2008-02-14  Mario Sanchez Prada  <msanchez@maemo.org>
 
 	* src/apt-worker-proto.h: Updated the comment with the definition
